--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -235,14 +235,9 @@
                                     </div>
                                 </div>
 
-                                <p>Grávidas/casais que queiram obter informação específica sobre o pós-parto e o cuidado
-                                    com os recém-nascidos. É nesta
-                                    consulta que as grávidas/casais têm a oportunidade de conhecer e estabelecer uma
-                                    relação de confiança com a Pediatra que
-                                    vai acompanhar a sua família e decidir se esta profissional se enquadra no seu
-                                    contexto familiar. Esta consulta deve ser
-                                    realizada após a ecografia morfológica do 2º trimestre (aproximadamente às 20
-                                    semanas de gestação).
+                                <p>Adultos que necessitem orientação com o seu regime alimentar ou sofram doenças que
+                                    requerem um acompanhamento
+                                    especializado em Nutrição.
                                 </p>
 
                                 <div class="section-title pt-4">
@@ -250,25 +245,16 @@
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                 </div>
                                 <ul class="list">
-                                    <li><a><i class="fa fa-check-circle"></i> Tipo de acompanhamento pediátrico
-                                            praticado.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Disponibilidade e contato da Pediatra.</a>
-                                    </li>
-                                    <li><a><i class="fa fa-check-circle"></i> Plano de parto em relação ao pós-parto
-                                            imediato e à primeira hora de vida do bebé.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Primeiros dias com um recém-nascido em
-                                            casa.</a>
-                                    </li>
-                                    <li><a><i class="fa fa-check-circle"></i> Tipo de alimentação que os pais desejam
-                                            dar ao seu bebé.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Dúvidas e questões que as grávidas/casais
-                                            tenham.</a></li>
+                                    <li><a><i class="fa fa-check-circle"></i> Treeducação alimentar do paciente para que
+                                            possa atingir os objetivos propostos, sejam eles de perda de massa gorda,
+                                            ganho de massa magra, melhoria da condição de saúde em geral, melhoria de
+                                            quadros de patologia e doença, etc.</a></li>
+
                                 </ul>
                                 <p>
-                                    <br><br>
-                                    <b><i>Importante:</i></b> Esta consulta inclui a recolha da história clínica da
-                                    gravidez atual e prévias (se procede). As grávidas/casais deverão
-                                    trazer consigo o boletim de gravidez.
+                                    <b><i>Importante:</i></b> Nesta consulta recolhemos informação clínica pertinente de
+                                    cada paciente e executamos um exame físico detalhado do
+                                    mesmo.
                                 </p>
                             </div>
                             <a href="../info.html" class="primary-btn">Marcar Consulta </a>
@@ -288,54 +274,27 @@
                                         </div>
                                     </div>
                                 </div>
+                                <p>A crianças e adolescentes.</p>
 
-                                <p>Bebés, crianças ou adolescentes cujos pais/tutores desejem ter um acompanhamento
-                                    pediátrico minucioso, atento e
-                                    carinhoso, pautado por rigor científico. Acompanhamos bebés, crianças e adolescentes
-                                    até aos 18 anos. <br><br>
-                                    <i>N’A Clínica</i> recomendamos o seguinte acompanhamento pediátrico de rotina:
-                                <ul class="list mb-4">
-                                    <li><a><i class="fa fa-check"></i> 1ª consulta entre o 3º e o 5º dia de
-                                            vida.</a></li>
-                                    <li><a><i class="fa fa-check"></i> 2ª consulta entre os 10 e os 15 dias de
-                                            vida.</a></li>
-                                    <li><a><i class="fa fa-check"></i> 3ª consulta ao mês de vida.</a></li>
-                                    <li><a><i class="fa fa-check"></i> 1 vez ao mês dos 2 até 6 meses de
-                                            vida.</a>
-                                    </li>
-                                    <li><a><i class="fa fa-check"></i> 8, 10, 12, 15, 18 e 24 meses de vida.</a>
-                                    </li>
-                                    <li><a><i class="fa fa-check"></i> A partir desse momento: consulta
-                                            anual.</a>
-                                    </li>
-                                </ul>
-                                </p>
 
                                 <div class="section-title pt-4">
                                     <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                 </div>
                                 <ul class="list mb-4">
-                                    <li><a><i class="fa fa-check-circle"></i> Avaliação global do bebé, criança ou
-                                            adolescente.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Regime alimentar e hábitos familiares
-                                            variados relevantes para a saúde infantil.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Prevenção de doenças.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Escolarização.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Saúde emocional e prevenção ou sinalização
-                                            de comportamentos de risco.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Saúde digital e prevenção ou sinalização
-                                            de
-                                            comportamentos de risco.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Dúvidas e questões que os pais e/ou a
-                                            criança tenham.</a></li>
+                                    <li><a><i class="fa fa-check"></i>O foco é avaliar o estado nutricional dos
+                                            pacientes de acordo com a sua fase de desenvolvimento. Mediante os objetivos
+                                            definidos, fazer o aconselhamento personalizado e apresentar as devidas
+                                            ferramentas e estratégias para a implementação
+                                            com sucesso da nova rotina alimentar. <br>
+                                            Para casos específicos de patologia será feito o reencaminhamento para uma
+                                            Nutricionista especializada em Pediatria.</a></li>
+
                                 </ul>
                                 <p>
-                                    <br><br>
-                                    <b><i>Importante:</i></b> Esta consulta inclui a recolha da história clínica do
-                                    paciente e exame físico do mesmo, sempre com a presença e
-                                    autorização dos pais. Os pais devem trazer o boletim de saúde do seu filho, bem como
-                                    o seu plano de vacinação.
+                                    <b><i>Importante:</i></b> Nesta consulta recolhemos informação clínica pertinente de
+                                    cada paciente e executamos um exame físico detalhado do
+                                    mesmo. Traga consigo o Boletim de Saúde da criança.
                                 </p>
                             </div>
                             <a href="../info.html" class="primary-btn">Marcar Consulta </a>
@@ -356,45 +315,23 @@
                                     </div>
                                 </div>
 
-                                <p><i>N’A Clínica</i> sabemos que o sono infantil é um dos temas que mais dúvidas gera
-                                    nas famílias. Pretendemos dar a conhecer os
-                                    padrões de sono na primeira infância e o seu ritmo fisiológico. <br><br>
-                                    Cada família tem as suas necessidades específicas e expectativas em relação ao sono
-                                    dos bebés/crianças nos primeiros
-                                    anos de vida. A gestão destas expetativas e baseá-las em fundamentos biológicos do
-                                    cérebro humano é crucial para
-                                    entender que o sono infantil é uma maratona e não uma corrida de velocidade. Tal
-                                    como noutras áreas da Pediatria, cada
-                                    bebé/criança tem o seu próprio ritmo!
-
-                                    <br><br>
-                                    Na nossa consulta de sono infantil, colocamos as necessidades fisiológicas do bebé
-                                    ou criança em primeiro lugar. Nesta
-                                    abordagem respeitadora, <b class="underline">não se realizam treinos de sono, nem se
-                                        determinam prazos
-                                        para que a criança durma a noite toda.</b>
+                                <p>Pessoas ou casais que pretendem engravidar.
                                 </p>
                                 <div class="section-title pt-4">
                                     <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                 </div>
                                 <ul class="list mb-4">
-                                    <li><a><i class="fa fa-check-circle"></i> Estratégias de indução do sono.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Higiene do sono.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Horas que cada bebé/criança deve dormir em
-                                            relação à sua idade.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Padrões fisiológicos do sono infantil.</a>
-                                    </li>
-                                    <li><a><i class="fa fa-check-circle"></i> Passagem do bebé para o quarto
-                                            próprio.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> <b>Sono seguro:</b> estratégias de
-                                            prevenção do Sd Morte súbita do latente.</a></li>
+                                    <li><a><i class="fa fa-check-circle"></i>Temáticas abordadas em consulta: garantir o
+                                            equilíbrio nutricional do casal que pretende engravidar. Este acompanhamento
+                                            tem um impacto fundamental na saúde reprodutiva, contribuindo positivamente
+                                            para a concretização da gravidez.</a></li>
+
                                 </ul>
                                 <p>
-                                    <br><br>
-                                    <b><i>Importante:</i></b> Esta consulta inclui a recolha da história clínica do
-                                    paciente e exame físico do mesmo (se for pertinente). Pode ser
-                                    realizada em regime online.
+                                    <b><i>Importante:</i></b> Nesta consulta recolhemos informação clínica pertinente de
+                                    cada paciente e executamos um exame físico detalhado da
+                                    mesma.
                                 </p>
                             </div>
                             <a href="../info.html" class="primary-btn">Marcar Consulta </a>
@@ -416,34 +353,25 @@
                                     </div>
                                 </div>
 
-                                <p>Bebés entre os 4 e os 6 meses que ainda não iniciaram a introdução alimentar.
-                                    Pretendemos descomplicar a introdução alimentar, facilitando assim a vida
-                                    familiar.
-                                    Habitualmente é realizada em regime de online e tem uma duração de entre 60 a 90
-                                    min, dependendo das dúvidas que surjam.
+                                <p>grávidas ou casais grávidos.
                                 </p>
                                 <div class="section-title pt-4">
                                     <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                 </div>
                                 <ul class="list mb-4">
-                                    <li><a><i class="fa fa-check-circle"></i> Regime alimentar preferido pelos pais.</a>
+                                    <li><a><i class="fa fa-check-circle"></i> esta consulta o foco é adequar a
+                                            alimentação da gestante de forma personalizada, atendendo às suas
+                                            necessidades
+                                            nutricionais em cada fase da gestação. Este acompanhamento permite otimizar
+                                            a sua saúde e bem-estar, bem como a do seu
+                                            bebé.</a>
                                     </li>
-                                    <li><a><i class="fa fa-check-circle"></i> Quando, como e porquê começar a introdução
-                                            alimentar.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> <b>Engasgamento:</b> como preveni-lo e
-                                            manobra de desengasgo.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> <b>Alergia alimentar:</b> sintomas e
-                                            sinais de alarme.</a>
-                                    </li>
-                                    <li><a><i class="fa fa-check-circle"></i> Alimentos proibidos.</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Adaptação da introdução à realidade da sua
-                                            família.</a></li>
                                 </ul>
                                 <p>
-                                    <br><br>
-                                    <b><i>Importante:</i></b> Esta consulta inclui a recolha da história clínica do
-                                    paciente.
+                                    <b><i>Importante:</i></b> Nesta consulta recolhemos informação clínica pertinente de
+                                    cada paciente e executamos um exame físico detalhado da
+                                    mesma. Traga consigo o Boletim de Saúde da Grávida.
                                 </p>
                             </div>
                             <a href="../info.html" class="primary-btn">Marcar Consulta </a>
