--- a/footer.html
+++ b/footer.html
@@ -62,7 +62,7 @@
                     <a href="#!" class="text-white">Galeria de fotos</a>
                 </p>
                 <p>
-                    <a href="galeria.html" class="text-white">Pedido de informação</a>
+                    <a href="info.html" class="text-white">Pedido de informação</a>
                 </p>
                 <p>
                     <a href="#!" class="text-white">Primeiros Socorros</a>
@@ -72,7 +72,7 @@
                 </p>
 
                 <p>
-                    <a href="#!" class="text-white">Workshops</a>
+                    <a href="pages/workshop.html" class="text-white">Workshops</a>
                 </p>
             </div>
             <!-- Grid column -->
@@ -88,7 +88,7 @@
                 <p><img src="img/icons/contacto.png" class="fa mr-3" width="20" height="20" alt="">+258 84
                     869 7194</p>
                 <p><img src="img/icons/home.png" class="fa mr-3" width="20" height="20" alt="">Edifício ou
-                    Shopping 24, Avenida 24 de Julho, Loja 20 </p>
+                    Shopping 24, Avenida 24 de Julho, Loja 20 R/c</p>
             </div>
             <!-- Grid column -->
         </div>
