--- a/pages/footer.html
+++ b/pages/footer.html
@@ -94,7 +94,7 @@
                 <p><img src="../img/icons/contacto.png" class="fa mr-3" width="20" height="20" alt="">+258 84
                     869 7194</p>
                 <p><img src="../img/icons/home.png" class="fa mr-3" width="20" height="20" alt="">Edifício ou
-                    Shopping 24, Avenida 24 de Julho, Loja 20 (R/C, corredor central ao lado do cabeleireiro)</p>
+                    Shopping 24, Avenida 24 de Julho, Loja 20 R/c</p>
                 <div class="col-lg-12 col-md-12 mt-4">
                     <div class="footer__newslatter">
                         <form action="#">
