--- a/header.html
+++ b/header.html
@@ -203,7 +203,7 @@
                         <li><a class="arrow" href="./additional-services.html">Workshops<span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
-                                <li><a href="workshop.html">Workshops</a></li>
+                                <li><a href="pages/workshop.html">Workshops</a></li>
                                 <li><a href="pages/workshop-amament.html">Amamentação</a></li>
                                 <li><a href="pages/workshop-bebe.html">Bebé</a></li>
                                 <li><a href="pages/workshp-gravidez.html">Gravidez</a></li>
